# sarteco-planner

./: README.md  kpis.json  pyproject.toml  requirements.txt
data/example/: orders.csv  products.csv  setups.csv  spaces.csv  staff_calendar.csv  storage.csv
data/synth/S1/baseline/I001/: meta.json  orders.csv  setups.csv
data/synth/S1/baseline/I002/: meta.json  orders.csv  setups.csv
data/synth/S1/baseline/I003/: meta.json  orders.csv  setups.csv
data/synth/S1/baseline/I004/: meta.json  orders.csv  setups.csv
data/synth/S1/baseline/I005/: meta.json  orders.csv  setups.csv
data/synth/S1/baseline/I006/: meta.json  orders.csv  setups.csv
data/synth/S1/baseline/I007/: meta.json  orders.csv  setups.csv
data/synth/S1/baseline/I008/: meta.json  orders.csv  setups.csv  spaces.csv
data/synth/S1/baseline/I009/: meta.json  orders.csv  setups.csv
data/synth/S1/baseline/I010/: meta.json  orders.csv  setups.csv
data/synth/S1/baseline/I011/: meta.json  orders.csv  setups.csv
data/synth/S1/baseline/I012/: meta.json  orders.csv  setups.csv
data/synth/S1/baseline/I013/: meta.json  orders.csv  setups.csv
outputs/: analysis.json  deliveries.csv  kpis.json  schedule.csv  workforce.csv
planner/: __init__.py  analyze.py  cli.py  io.py  plot_gantt.py  plot_gantt_units.py  solve.py
results/sarteco_synth_v1/: kpis.csv
results/sensitivity_v1/: runs.csv  summary.csv
sarteco-planner/: calendar.py
scripts/: generate_instances.py
tools/: generate_benchmark.py  generate_instances.py  plot_runtime.py  run_benchmark.py  run_sensitivity.py
(+1086 files in other folders)
